--- a/new.html
+++ b/new.html
@@ -7,5 +7,9 @@
   </head>
   <body style="margin: 0;">
     <h1>hello, new page</h1>
+    <p>Hello</p>
+    <p>This is Dorothy</p>
+    <p>Welcome to meet you all</p>
+    <p>This is a practice personal website</p>
   </body>
 </html>
